# log-manager

./: CMakeLists.txt  README.md  build-with-tests.sh
cmake/: GTest.cmake  Json.cmake
src/: log-builder.cpp  log-builder.h  log-interface.h  sink-interface.h  tools.h
src/internal/: log-message-tools.cpp  log-message-tools.h  logger.cpp  logger.h  time-tools.cpp  time-tools.h
src/internal/sinks/: file-sink-tools.cpp  file-sink-tools.h  system-log-sink-tools.cpp  system-log-sink-tools.h
src/sinks/: file-sink.cpp  file-sink.h  general-sink-config.cpp  general-sink-config.h
src/sinks/console-sink/: console-sink.cpp  console-sink.h
src/sinks/file-sink/: file-sink-config.cpp  file-sink-config.h  file-sink-types.cpp  file-sink-types.h  file-sink.cpp  file-sink.h
src/sinks/system-log-sink/: system-log-sink.cpp  system-log-sink.h
tests/: CMakeLists.txt  console-sink-tests.cpp  file-sink-config-tests.cpp  file-sink-tests.cpp  file-sink-tools-tests.cpp  file-sink-types-tests.cpp  general-sink-config-tests.cpp  log-builder-tests.cpp  log-message-tools-tests.cpp  logger-tests.cpp  system-log-sink-tests.cpp  time-tools-tests.cpp
